style.css
/* ========= Select All=========  */

* {
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
}

body {
  display: grid;
  grid-template-columns: 13rem 1fr;
  margin: 0;
}

a{
  text-decoration: none;
  color: #8691a3;
  text-transform: uppercase;
}

ul{
  list-style-type: none;
}

/* ========= Top Nav =========  */

#secret-menu-button {
  display: none;
}

.top-nav {
  background-color: #fff;
  border-bottom: 1px solid #c3c9d3;
  display: grid;
  grid-template-columns: 4rem 1fr 4rem 4rem 4rem;
  width: 100%;
}

.search-btns {
  background: none;
  border: #93adc1;
  border-right: 0.5px solid #c3c9d3;
  color: #93adc1;
  cursor: pointer;
  font-size: 0.8rem;
  height: 3rem;
}

.user-plus {
  border-left: 0.5px solid #c3c9d3;
}

.main-nav:hover,
.main-lis:hover {
  cursor: pointer;
  transition: 300ms ease-in-out;
}

.search-bar-literal {
  border: #93adc1;
  background: url(img/magnify.png) no-repeat scroll 5px 15px;
  background-size: 15px;
}

.search-bar input{
  padding-left: 3px;
}

.fa-caret-left {
  color: #16a4fa;
  margin-right: 2px;
}

.search-btns:hover {
  background-color: #16a4fa;
  color: #fcfafb;
  cursor: pointer;
  transition: 300ms ease-in-out;
}

.user-plus {
  background-color: #16a4fa;
  color: #fcfafb;
}

.position-container {
  background-color: #fff;
  color: #7c7b80;
  padding: 2rem 2rem 0.2rem 2rem;
}

.search-bar-literal::placeholder {
  padding-left: 30px;
}

/* ========= Sidebar =========  */

.sidebar {
  background-color: #354051;
  color: #8691a3;
}
/* = Sidebar Header =  */

.user-profile-picture-menu {
  border-bottom: 1px solid #2e394a;
  cursor: pointer;
  font-size: 0.5rem;
  margin-top: 40px;
  text-align: center;
}

.round-profile-picture {
  border-radius: 100px;
  cursor: pointer;
  max-width: 5rem;
}

.fa-angle-down {
  margin-left: 10px;
}

.fa-angle-down:hover {
  color: #fcfafb;
  cursor: pointer;
}

h1 {
  font-size: 1.5rem;
  margin: 0;
}

.location {
  font-size: 1rem;
  cursor: pointer;
}

/* ===== Sidebar Links =====  */

.sidebar-links{
  display: grid;
  grid-template-columns: 3rem 15rem;
}

/* = Sidebar Left Side =  */

.sidebar-left ul{
  padding-left: 20px;
}

.sidebar-left li{
  padding: 10px 10px 10px 0;
}

.sidebar-left h3{
  padding-left: 0px;
  color: #727a81;
}

.yellow-checkbox{
  color: #d3bd30
}

.blue-checkbox{
  color: #2aafff;
}

.red-checkbox{
  color: #e81a61;
}

.green-checkbox{
  color: #099880
}

/* = Sidebar Right Side =  */

.sidebar-right ul{
  padding: 0;
}

.sidebar-right h3{
  opacity: 0;
}

.sidebar-right li{
  padding: 10px 0px;
  color: #8691a3;
}

.sidebar li:hover, .sidebar a:hover{
  background-color: #30394a;
  color: #eee;
}

.active-li, .active-link{
  color: white;
  background-color: #31394a;
}

/* ===== Position Container ====  */

/* == Right side buttons ==  */

.open {
  border-radius: 20px;
  padding: 5px 10px;
}

.fa-circle {
  color: #85c629;
  font-size: 0.5rem;
}

.bookmark,
.trash,
.pencil {
  border-radius: 60px;
  padding: 5px 9px;
  color: #7c7b80;
}

.open:hover,
.bookmark:hover,
.trash:hover,
.pencil:hover {
  background-color: #16a4fa;
  color: #fcfafb;
  cursor: pointer;
  transition: 300ms ease-in-out;
}


/* ========= Main nav =========  */

main {
  background-color: #edf2f6;
}

.position-container{
  padding-left: 50px;
  display: grid;
  grid-template-columns: 1fr 11rem;
}

.preview{
  color: #16a4fa;
}

.main-nav {
  align-self: flex-end;
  display: flex;
  justify-content: space-between;
  margin-bottom: 1px;
  padding: 0;
}

.main-nav li {
  display: inline;
  padding-bottom: 10px;
}

.main-nav li:hover {
  border-bottom: 3px solid #16a4fa;
  cursor: pointer;
  transition: 300ms ease-in-out;
}

.focus {
  border-bottom: 4px solid #16a4fa;
}

/* ========= Hr dividers =========  */

.dividers {
  display: grid;
  grid-template-columns: 1fr 2rem 1fr;
  align-self: start;
  margin-bottom: 2rem;
}

.fa-chevron-circle-up {
  color: #b9b8be;
  font-size: 1rem;
}

hr {
  width: 90%;
  font-size: 1rem;
}

.dividers i:hover {
  color: #16a4fa;
  cursor: pointer;
}


/* ========= Circle Chart Nightmare =========  */

.summary-container{
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.svg-box {
  background-color: #edf2f6;
  margin-top: 0.8rem;
}

/* === SVGs ===  */

.circle-graphs {
  display: flex;
  flex-direction: row;
}

.circular-chart {
  color: #838c94;
  font-size: 0.5rem;
  margin-left: 20px;
  min-width: 10rem;
}

.circle-explain {
  font-size: 0.2rem;
  color: #838c94;
  text-transform: uppercase;
}

.circle-bg {
  stroke: #d6dadf;
  stroke-width: 1.8;
}

.circle-one,
.circle-two,
.circle-three {
  animation: progress 2s ease-out;
  fill: #eee;
  stroke-width: 2.3;
  stroke-linecap: round;
}

.circle-one {
  stroke: #4cc790;
}

.circle-two {
  stroke: #14a1f4;
}

.circle-three {
  stroke: #b36ab3;
}

@keyframes progress {
  0% {
    stroke-dasharray: 0 800;
  }
}

/* == Graph Buttons ==  */

.total {
  border-radius: 50px;
  cursor: pointer;
  font-size: .7rem;
  padding: 9px;
  text-transform: uppercase;
}

.totals, .totals2{
  text-align: center;
}

.total:hover {
  background-color: #16a4fa;
  color: #fcfafb;
}

/* == Bar chart == */

.bar-graph-container{
  text-align: center
}

#bar-graph {
  max-width: 100%;
  width: auto;
}


/* ========= Bottom Half =========  */

.secondary-content {
  display: grid;
  grid-template-columns: 1fr 30rem;
}

/* ========= Table =========  */

table {
  background-color: #fff;
  border-collapse: collapse;
  margin-left: 4rem;
}

th {
  background-color: #6f7d95;
}

td {
  border-bottom: 1px solid #d8dde7;
  color: #677d9c;
  padding: 20px;
}

.th-left {
  border-radius: 5px 0 0 0;
  color: white;
  font-size: 0.6rem;
  padding: 20px 10px;
  text-transform: uppercase;
}

.round-face-small {
  border-radius: 100px;
  max-width: 3rem;
}

.likethecolorgray {
  left: 10px;
  position: relative;
  top: -14px;
}

.th-right {
  border-radius: 0 5px 0 0;
  padding-left: 20px;
  text-align: left;
}

.edit-btn {
  background-color: #7e8da7;
  border: none;
  color: white;
  padding: 8px 19px;
  text-transform: uppercase;
}

.edit-btn:hover {
  background-color: #9fadc4;
  cursor: pointer;
}

th .fa-pencil-alt {
  padding-right: 5px;
}

/* ========= Bottom Right Nav =========  */


.right-side-nav-container {
  padding: 0 50px 20px 50px;
}

.social {
  border-radius: 5px;
  color: #9fadc4;
  font-size: 1rem;
  margin-bottom: 15px;
  padding: 15px;
  text-align: left;
  width: 100%;
}

.social:hover {
  cursor: pointer;
  filter: brightness(120%);
}

.social i{
  padding-right: 90px;
}

.facebook-link {
  background-color: #4c72c3;
  border: none;
  color: white;
}

.twitter-link {
  background-color: #00aaef;
  border: none;
  color: white;
}

.linkedin-link {
  background-color: #0384bf;
  border: none;
  color: white;
}

h5 {
  color: #727a81;
  font-size: 1rem;
}

h5 i{
  padding-right: 5px;
}

.info-text {
  color: #727a81;
  font-size: 0.9rem;
}

.link-input {
  border: none;
  font-size: 1rem;
  margin: 0;
  padding-left: 1rem;
  height: 54px;
  width: 80%
}

.copy-button {
  background-color: #77ced6;
  border-radius: 0 3px 3px 0;
  border: 0;
  color: white;
  font-size: 1rem;
  margin-left: 0;
  padding: 15px 0;
  width: 15%;
}

.copy-button:hover {
  cursor: pointer;
  filter: brightness(110%);
}

.copy-button::placeholder {
  color: #a9afb8;
}

.link-input.email {
  width: 100%
}

@media only screen and (max-width: 1150px){

  body {
    display: grid;
    grid-template-columns: 1fr;
  }
  
  .circular-chart{
    min-width: 8rem;
  }

  .main-lis{
    font-size: .9rem;
  }

  table{
    margin: 1rem;
  }

  .sidebar{
    display:none;
  }
}

@media only screen and (max-width: 900px){
  .secondary-content {
    display: grid;
    grid-template-columns: 30rem 1fr;
  }
  .circular-chart{
    min-width: 6rem;
  }
  .social i{
    padding-right: 2px;
  }
  .right-side-nav-container {
    padding: 0 20px 10px 20px;
  }

  .position-container{
    display: grid;
    grid-template-columns: 1fr;
    padding-left: 1rem;
  }

  .summary-container{
    display: grid;
    grid-template-columns: 1fr;
  }
}

@media only screen and (max-width: 700px){
  .secondary-content {
    display: grid;
    grid-template-columns: 1fr
  }
  .position-container{
    display: grid;
    grid-template-columns: 1fr;
    padding-left: 1rem;
  }
  .social {
    width: 32%;
  }
  table {
    margin: 1rem;
  }
}

@media only screen and (max-width: 614px){

  .circular-chart{
    min-width: 10rem;
  }
  .svg-box {
    margin-left: auto;
    margin-right: auto;
  }

  .main-lis{
    font-size: .7rem;
  }

  .circle-graphs {
    align-content: center;
    flex-direction: column;
    display: flex;
    max-width: 10rem;
  }
  .position-container{
    padding: .5rem;
  }
  
}

@media only screen and (max-width: 614px){
   .main-lis{
    font-size: .6rem;
  }
}

@media only screen and (max-width: 400px){
  .main-lis{
   font-size: .3rem;
   padding: 0;
 }
}

